--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@solana/actions": "^1.6.6",
     "@solana/spl-token": "^0.4.9",
     "@solana/web3.js": "^1.98.0",
     "dotenv": "^16.4.7",
