--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@reown/appkit": "^1.6.4",
+    "@reown/appkit-adapter-solana": "^1.6.4",
     "@solana/actions": "^1.6.6",
     "@solana/spl-token": "^0.4.9",
     "@solana/wallet-adapter-base": "^0.9.23",
