--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@dialectlabs/blinks": "^0.20.1",
+    "@project-serum/anchor": "^0.26.0",
     "@reown/appkit": "^1.6.4",
     "@reown/appkit-adapter-solana": "^1.6.4",
     "@solana/actions": "^1.6.6",
@@ -19,6 +20,8 @@
     "@solana/wallet-adapter-react-ui": "^0.9.35",
     "@solana/wallet-adapter-wallets": "^0.19.32",
     "@solana/web3.js": "1",
+    "bs58": "^6.0.0",
+    "cross-fetch": "^4.1.0",
     "dotenv": "^16.4.7",
     "next": "15.1.4",
     "react": "^19.0.0",
